--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -196,3 +196,12 @@ repos:
    rev: v0.12.0
    hooks:
      - id: markdownlint
+
+
+ - repo: https://github.com/pre-commit/mirrors-prettier
+   rev: "v3.0.0-alpha.4"
+   hooks:
+     - id: prettier
+       additional_dependencies: ["prettier@2.7.1", "prettier-plugin-solidity@1.0.0"]
+       files: "\\.sol$"
+       args: ["--plugin=prettier-plugin-solidity"]
