--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -188,10 +188,11 @@ repos:
        args: [--py38-plus]
 
 
- - repo: https://github.com/markdownlint/markdownlint
-   rev: v0.12.0
+ - repo: https://github.com/igorshubovych/markdownlint-cli
+   rev: v0.32.2
    hooks:
      - id: markdownlint
+       args: ["--fix"]
 
 
  - repo: https://github.com/pre-commit/mirrors-prettier
